--- a/src/lqr/CMakeLists.txt
+++ b/src/lqr/CMakeLists.txt
@@ -1,4 +1,5 @@
-add_library(lqr lqr.cpp)
-target_link_libraries(lqr ${LIBRARIES})
-
+#add_library(lqr lqr.cpp)
+#target_link_libraries(lqr ${LIBRARIES})
+#
 add_executable(lqr_demo main.cpp)
+target_link_libraries(lqr_demo ${LIBRARIES})
