--- a/src/lqr/CMakeLists.txt
+++ b/src/lqr/CMakeLists.txt
@@ -1,5 +1,6 @@
-#add_library(lqr lqr.cpp)
-#target_link_libraries(lqr ${LIBRARIES})
-#
+add_library(lqr INTERFACE)
+target_include_directories(lqr INTERFACE ${INCLUDE_DIR})
+target_link_libraries(lqr INTERFACE ${LIBRARIES})
+
 add_executable(lqr_demo main.cpp)
-target_link_libraries(lqr_demo ${LIBRARIES})
+target_link_libraries(lqr_demo lqr kinematics)
