Added DDP things, create quadratize for vector values functions and some utils

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,3 +13,4 @@ set(LIBRARIES Eigen3::Eigen)
 add_subdirectory(src/kinematics)
 add_subdirectory(src/lqr)
 add_subdirectory(src/ilqr)
+add_subdirectory(src/ddp)
